[application] Fix overflow behavior for various panes.
Fixed: chromium:1521635, chromium:1521637, chromium:1521617
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5233806
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/application/backgroundServiceView.css
+++ b/front_end/panels/application/backgroundServiceView.css
@@ -14,6 +14,10 @@
   border: none;
 }
 
+[slot="insertion-point-main"] {
+  overflow: auto;
+}
+
 .background-service-preview {
   position: absolute;
   background-color: var(--sys-color-cdt-base-container);
