--- a/front_end/panels/application/interestGroupStorageView.css
+++ b/front_end/panels/application/interestGroupStorageView.css
@@ -9,9 +9,13 @@ devtools-interest-group-access-grid {
 }
 
 .placeholder {
-  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 13px;
   color: var(--sys-color-token-subtle);
+  overflow: auto;
+
+  & div {
+    width: 100%;
+  }
 }
