--- a/front_end/panels/application/reportingApiReportsView.css
+++ b/front_end/panels/application/reportingApiReportsView.css
@@ -5,9 +5,13 @@
  */
 
 .placeholder {
-  display: flex;
   align-items: center;
   justify-content: center;
   font-size: 13px;
   color: var(--sys-color-token-subtle);
+  overflow: auto;
+
+  & div {
+    width: 100%;
+  }
 }
